--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -4,7 +4,7 @@
             <legend>Welcome to your personal space!</legend>
             <div class="inner-form">
                 <div class="input-field">
-                    <input class="form-control" id="choices-text-preset-values" type="text"  [(ngModel)]="texboxresult" name="searchTextBox"
+                    <input class="form-control" id="choices-text-preset-values" type="text"  [(ngModel)]="searchTextBox" name="searchTextBox"
                         placeholder="Type to talk..." />
                     <button class="btn-search" type="button">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
