--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -5,7 +5,7 @@
             <div class="inner-form">
                 <div class="input-field">
                     <div class="choices">
-                        <input class="form-control choices__inner" type="text" [(ngModel)]="textboxValue" (ngModelChange)="SearchUrl('searchText')"
+                        <input class="form-control choices__inner" type="text" [(ngModel)]="textboxValue" (keyup)="onKey($event)"
                             name="textboxValue" placeholder="Type to talk..." />
                         <button class="btn-search" type="button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
